# ai-training-camp

./: .gitmodules
.claude/: settings.local.json
.claude/agents/: py-arch.md
.claude/commands/: codereview.md
specs/001-db-query-tool/: tasks.md  tasks.md.backup
specs/w3/: instrucation.md
specs/w4/: apply-patch.md  codex-apply-patch-integration.md  codex-arch-by-claude.md  codex-arch-by-codex.md  codex-changes-by-claude.md  codex-changes-by-codex.md  gin-arch-claude.md  gin-router.md  instrucaions.md  open-notebook-arch-design.md  open-notebook-podcast.md  open-notebook-surrealdb.md
w1/: instructions.md
w1/spec/: 0001-spec-cursor.md  0002-implementation-plan-cursor.md
w2/spec/: instructions.md
wk1/: 001-spec-cursor.md  001-spec.md  002-implementation-plan-cursor.md  002-implementation-plan.md  instructions-cursor.md  instructions.md
wk1/project-alpha/: DEPLOYMENT.md  Makefile
wk2/: .gitignore  FEATURE_EXPORT.md  README.md
wk2/.claude/: settings.local.json
wk2/db_query/: .env.example  MAKEFILE.md  Makefile  README.md  TESTING.md
wk2/db_query/backend/: README.md  pyproject.toml
wk2/db_query/backend/src/db_query/: config.py  database.py  main.py
wk2/db_query/backend/src/db_query/api/: __init__.py
wk2/db_query/backend/src/db_query/api/v1/: __init__.py  databases.py  queries.py
wk2/db_query/backend/src/db_query/models/: __init__.py  database.py  llm.py  query.py
wk2/db_query/backend/src/db_query/services/: __init__.py  db_service.py  llm_service.py  query_service.py
wk2/db_query/backend/src/db_query/utils/: error_handlers.py  sql_parser.py
wk3/: CLAUDE.md  Makefile  institution.md
(+128 files in other folders)
